services a medio hacer, faltan los comentarios

--- a/html/index.html
+++ b/html/index.html
@@ -26,13 +26,13 @@
             <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link regular text-barra" href="#">INICIO</a>
+                        <a class="nav-link regular text-barra" href="index.html">HOME</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link regular text-barra" href="#">SERVICIOS</a>
+                        <a class="nav-link regular text-barra" href="services.html">SERVICES</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link regular text-barra" href="#">CONTACTO</a>
+                        <a class="nav-link regular text-barra" href="#">CONTACT</a>
                     </li>
                 </ul>
             </div>
