todas las paginas acabadas

--- a/html/index.html
+++ b/html/index.html
@@ -16,7 +16,7 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-white bg-white">
         <div class="container">
-            <a class="navbar-brand bold logo" href="#">PODCASTWORLD</a>
+            <a class="navbar-brand bold logo" href="index.html">PODCASTWORLD</a>
 
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -32,7 +32,7 @@
                         <a class="nav-link regular text-barra" href="services.html">SERVICES</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link regular text-barra" href="#">CONTACT</a>
+                        <a class="nav-link regular text-barra" href="contact.html">CONTACT</a>
                     </li>
                 </ul>
             </div>
