--- a/html/services.html
+++ b/html/services.html
@@ -16,7 +16,7 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-white bg-white">
         <div class="container">
-            <a class="navbar-brand bold logo" href="#">PODCASTWORLD</a>
+            <a class="navbar-brand bold logo" href="index.html">PODCASTWORLD</a>
 
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -32,7 +32,7 @@
                         <a class="nav-link regular text-barra" href="services.html">SERVICES</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link regular text-barra" href="#">CONTACT</a>
+                        <a class="nav-link regular text-barra" href="contact.html">CONTACT</a>
                     </li>
                 </ul>
             </div>
@@ -135,45 +135,51 @@
         </div>
     </div>
 
-    <div class="container mt-5">
+    <div class="container mt-5 welcome-h1">
+        <h1 class="regular subtitulo welcome-h1">USER OPINION</h1>
         <div class="row">
-            <!-- Columna 1 -->
             <div class="col-md-6">
                 <div class="comentario thin">
                     <img src="./../misc/avatar.png" alt="Usuario 1" class="img-fluid foto-usuario">
-                    <p>El proximo rest del mundo será en el 2029 con la IA,
+                    <p>El próximo rest del mundo será en el 2029 con la IA,
                         nos pasará como le paso a la antigua Tartaria.</p>
                 </div>
-                <div class="comentario">
-                    <img src="foto-usuario-2.jpg" alt="Usuario 2" class="img-fluid foto-usuario">
-                    <p>Comentario del Usuario 2.</p>
+                <div class="comentario thin">
+                    <img src="./../misc/user2.png" alt="Usuario 2" class="img-fluid foto-usuario">
+                    <p>El próximo rest del mundo será en el 2029 con la IA,
+                        nos pasará como le paso a la antigua Tartaria.</p>
                 </div>
-                <div class="comentario">
-                    <img src="foto-usuario-3.jpg" alt="Usuario 3" class="img-fluid foto-usuario">
-                    <p>Comentario del Usuario 3.</p>
+                <div class="comentario thin">
+                    <img src="./../misc/user3.png" alt="Usuario 3" class="img-fluid foto-usuario">
+                    <p>El próximo rest del mundo será en el 2029 con la IA,
+                        nos pasará como le paso a la antigua Tartaria.</p>
                 </div>
-                <div class="comentario">
-                    <img src="foto-usuario-4.jpg" alt="Usuario 4" class="img-fluid foto-usuario">
-                    <p>Comentario del Usuario 4.</p>
+                <div class="comentario thin">
+                    <img src="./../misc/avatar4.png" alt="Usuario 4" class="img-fluid foto-usuario">
+                    <p>El próximo rest del mundo será en el 2029 con la IA,
+                        nos pasará como le paso a la antigua Tartaria.</p>
                 </div>
             </div>
-            <!-- Columna 2 -->
             <div class="col-md-6">
-                <div class="comentario">
-                    <img src="foto-usuario-5.jpg" alt="Usuario 5" class="img-fluid foto-usuario">
-                    <p>Comentario del Usuario 5.</p>
+                <div class="comentario thin">
+                    <img src="./../misc/avatar.png" alt="Usuario 1" class="img-fluid foto-usuario">
+                    <p>El próximo rest del mundo será en el 2029 con la IA,
+                        nos pasará como le paso a la antigua Tartaria.</p>
                 </div>
-                <div class="comentario">
-                    <img src="foto-usuario-6.jpg" alt="Usuario 6" class="img-fluid foto-usuario">
-                    <p>Comentario del Usuario 6.</p>
+                <div class="comentario thin">
+                    <img src="./../misc/user2.png" alt="Usuario 2" class="img-fluid foto-usuario">
+                    <p>El próximo rest del mundo será en el 2029 con la IA,
+                        nos pasará como le paso a la antigua Tartaria.</p>
                 </div>
-                <div class="comentario">
-                    <img src="foto-usuario-7.jpg" alt="Usuario 7" class="img-fluid foto-usuario">
-                    <p>Comentario del Usuario 7.</p>
+                <div class="comentario thin">
+                    <img src="./../misc/user3.png" alt="Usuario 3" class="img-fluid foto-usuario">
+                    <p>El próximo rest del mundo será en el 2029 con la IA,
+                        nos pasará como le paso a la antigua Tartaria.</p>
                 </div>
-                <div class="comentario">
-                    <img src="foto-usuario-8.jpg" alt="Usuario 8" class="img-fluid foto-usuario">
-                    <p>Comentario del Usuario 8.</p>
+                <div class="comentario thin">
+                    <img src="./../misc/avatar4.png" alt="Usuario 4" class="img-fluid foto-usuario">
+                    <p>El próximo rest del mundo será en el 2029 con la IA,
+                        nos pasará como le paso a la antigua Tartaria.</p>
                 </div>
             </div>
         </div>
