--- a/html/index.html
+++ b/html/index.html
@@ -9,6 +9,10 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+
     <link rel="stylesheet" href="../css/styles.css">
     <title>PodcastWorld</title>
 </head>
@@ -115,7 +119,7 @@
                             deportes, filosofía, psicología.</p>
                         <div class="d-flex justify-content-between align-items-center">
                             <p class="thin">★4.5</p>
-                            <a href="#" class="boton-card">SEE MORE</a>
+                            <a href="#" class="boton-card" data-toggle="modal" data-target="#ModalWild">SEE MORE</a>
                         </div>
                     </div>
                 </div>
@@ -130,7 +134,7 @@
                             Conversaciones sin cortes, filtros ni guiones. <br> Todo tipo de invitados.</p>
                         <div class="d-flex justify-content-between align-items-center">
                             <p class="thin">★4.2</p>
-                            <a href="#" class="boton-card">SEE MORE</a>
+                            <a href="#" class="boton-card" data-toggle="modal" data-target="#ModalTartaria">SEE MORE</a>
                         </div>
 
                     </div>
@@ -143,20 +147,98 @@
                     <div class="card-body">
                         <h5 class="card-title regular">YO, INTERNETO</h5>
                         <p class="card-text thin">Yo, Interneto el programa de internet para los chavales del parque.
-                            Hablamos de la internet, somos la internet. <br><br>Todos los Lunes a las 20h nuevo
+                            Hablamos de la internet, somos la internet.<br><br>Todos los Lunes a las 20h nuevo
                             programa.</p>
                         <div class="d-flex justify-content-between align-items-center">
                             <p class="thin">★5</p>
-                            <a href="#" class="boton-card">SEE MORE</a>
+                            <a class="boton-card" data-toggle="modal" data-target="#ModalInterneto">SEE MORE</a>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
+        <div class="d-flex justify-content-end">
+            <a class="boton-card" href="podcastgrid.html">SEE MORE</a>
+        </div>
     </div>
+    <div class="modal fade" id="ModalInterneto" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+            aria-hidden="true">
+            <div class="modal-dialog" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title bold" id="exampleModalLabel">YO, INTERNETO</h5>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                    <div class="modal-body contenedormodal">
+                        <iframe width="490" height="245" src="https://www.youtube.com/embed/tkDjUxQUL5A?si=5iP9y2Q5_GajATx0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                        <div>
+                            <h1 class="regular">Yo, Interneto - Illojuan</h1>
+                            <p class="thin">Hablamos sobre la Internet. Somos @orslok, @darioemehache, @srcheeto y @KsioEstaCogido <br>
+                                Contacto: YoInterneto@gmail.com </p>
+                        </div>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="boton-card" data-dismiss="modal">CLOSE</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="modal fade" id="ModalTartaria" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+            aria-hidden="true">
+            <div class="modal-dialog" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title bold" id="exampleModalLabel">WORLDCA$T</h5>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                    <div class="modal-body contenedormodal">
+                        <iframe width="490" height="245" src="https://www.youtube.com/embed/Fh9t_l9UWPo?si=5V0WsNRmr7Khh015" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                        <div>
+                            <h1 class="regular">Worldcast # 70</h1>
+                            <p class="thin">Cría de Clones, Abducciones, Super Soldados, Bases Subterráneas, Los Púrpura...</p>
+                        </div>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="boton-card" data-dismiss="modal">CLOSE</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="modal fade" id="ModalWild" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+            aria-hidden="true">
+            <div class="modal-dialog" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title bold" id="exampleModalLabel">THE WILD PROJECT</h5>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                    <div class="modal-body contenedormodal">
+                        <iframe width="490" height="245" src="https://www.youtube.com/embed/FuFcFm4btwk?si=mgJquPuAldjgTiuW" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                        <div>
+                            <h1 class="regular">The Wild Project</h1>
+                            <p class="thin">- Participan:
+                                <br>
+                                El del rap del goku:   
+                                / @ucancmsbvzlmv4b6xn73bteq    
+                                <br>
+                                Iker Casillas con alergia:   
+                                / @ucbincozgxwjtmye-qe6kavw   </p>
+                        </div>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="boton-card" data-dismiss="modal">CLOSE</button>
+                    </div>
+                </div>
+            </div>
+        </div>
     <div class="container mt-3">
         <h2 class="bold titulo">COMMUNITY FORUM</h2>
-
         <div class="media mb-3 borde">
             <div class="media-body margen">
                 <h5 class="mt-0 regular">Karles Torah</h5>
@@ -195,28 +277,45 @@
                 </div>
                 <br>
                 <div class="d-flex justify-content-end">
-                    <button type="submit" class="botton-coment">SEND</button>
+                    <button type="submit" class="botton-coment" data-toggle="tooltip" data-placement="top"
+                        title="SEND">SEND</button>
                 </div>
             </form>
         </div>
     </div>
     <footer class="container">
-            <div class="d-flex justify-content-center">
-                    <a href="https://www.facebook.com/" target="_blank">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="0 0 24 24" style="fill: rgba(0, 0, 0, 1);transform: ;msFilter:;"><path d="M20 3H4a1 1 0 0 0-1 1v16a1 1 0 0 0 1 1h8.615v-6.96h-2.338v-2.725h2.338v-2c0-2.325 1.42-3.592 3.5-3.592.699-.002 1.399.034 2.095.107v2.42h-1.435c-1.128 0-1.348.538-1.348 1.325v1.735h2.697l-.35 2.725h-2.348V21H20a1 1 0 0 0 1-1V4a1 1 0 0 0-1-1z"></path></svg>
-                    </a>
-                    <a href="https://www.instagram.com/" target="_blank">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="0 0 24 24" style="fill: rgba(0, 0, 0, 1);transform: ;msFilter:;"><path d="M20.947 8.305a6.53 6.53 0 0 0-.419-2.216 4.61 4.61 0 0 0-2.633-2.633 6.606 6.606 0 0 0-2.186-.42c-.962-.043-1.267-.055-3.709-.055s-2.755 0-3.71.055a6.606 6.606 0 0 0-2.185.42 4.607 4.607 0 0 0-2.633 2.633 6.554 6.554 0 0 0-.419 2.185c-.043.963-.056 1.268-.056 3.71s0 2.754.056 3.71c.015.748.156 1.486.419 2.187a4.61 4.61 0 0 0 2.634 2.632 6.584 6.584 0 0 0 2.185.45c.963.043 1.268.056 3.71.056s2.755 0 3.71-.056a6.59 6.59 0 0 0 2.186-.419 4.615 4.615 0 0 0 2.633-2.633c.263-.7.404-1.438.419-2.187.043-.962.056-1.267.056-3.71-.002-2.442-.002-2.752-.058-3.709zm-8.953 8.297c-2.554 0-4.623-2.069-4.623-4.623s2.069-4.623 4.623-4.623a4.623 4.623 0 0 1 0 9.246zm4.807-8.339a1.077 1.077 0 0 1-1.078-1.078 1.077 1.077 0 1 1 2.155 0c0 .596-.482 1.078-1.077 1.078z"></path><circle cx="11.994" cy="11.979" r="3.003"></circle></svg>
-                    </a>
-                    <a href="https://twitter.com/" target="_blank">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="0 0 24 24" style="fill: rgba(0, 0, 0, 1);transform: ;msFilter:;"><path d="M19.633 7.997c.013.175.013.349.013.523 0 5.325-4.053 11.461-11.46 11.461-2.282 0-4.402-.661-6.186-1.809.324.037.636.05.973.05a8.07 8.07 0 0 0 5.001-1.721 4.036 4.036 0 0 1-3.767-2.793c.249.037.499.062.761.062.361 0 .724-.05 1.061-.137a4.027 4.027 0 0 1-3.23-3.953v-.05c.537.299 1.16.486 1.82.511a4.022 4.022 0 0 1-1.796-3.354c0-.748.199-1.434.548-2.032a11.457 11.457 0 0 0 8.306 4.215c-.062-.3-.1-.611-.1-.923a4.026 4.026 0 0 1 4.028-4.028c1.16 0 2.207.486 2.943 1.272a7.957 7.957 0 0 0 2.556-.973 4.02 4.02 0 0 1-1.771 2.22 8.073 8.073 0 0 0 2.319-.624 8.645 8.645 0 0 1-2.019 2.083z"></path></svg>
-                    </a>
+        <div class="d-flex justify-content-center">
+            <a href="https://www.facebook.com/" target="_blank">
+                <svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="0 0 24 24"
+                    style="fill: rgba(0, 0, 0, 1);transform: ;msFilter:;">
+                    <path
+                        d="M20 3H4a1 1 0 0 0-1 1v16a1 1 0 0 0 1 1h8.615v-6.96h-2.338v-2.725h2.338v-2c0-2.325 1.42-3.592 3.5-3.592.699-.002 1.399.034 2.095.107v2.42h-1.435c-1.128 0-1.348.538-1.348 1.325v1.735h2.697l-.35 2.725h-2.348V21H20a1 1 0 0 0 1-1V4a1 1 0 0 0-1-1z">
+                    </path>
+                </svg>
+            </a>
+            <a href="https://www.instagram.com/" target="_blank">
+                <svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="0 0 24 24"
+                    style="fill: rgba(0, 0, 0, 1);transform: ;msFilter:;">
+                    <path
+                        d="M20.947 8.305a6.53 6.53 0 0 0-.419-2.216 4.61 4.61 0 0 0-2.633-2.633 6.606 6.606 0 0 0-2.186-.42c-.962-.043-1.267-.055-3.709-.055s-2.755 0-3.71.055a6.606 6.606 0 0 0-2.185.42 4.607 4.607 0 0 0-2.633 2.633 6.554 6.554 0 0 0-.419 2.185c-.043.963-.056 1.268-.056 3.71s0 2.754.056 3.71c.015.748.156 1.486.419 2.187a4.61 4.61 0 0 0 2.634 2.632 6.584 6.584 0 0 0 2.185.45c.963.043 1.268.056 3.71.056s2.755 0 3.71-.056a6.59 6.59 0 0 0 2.186-.419 4.615 4.615 0 0 0 2.633-2.633c.263-.7.404-1.438.419-2.187.043-.962.056-1.267.056-3.71-.002-2.442-.002-2.752-.058-3.709zm-8.953 8.297c-2.554 0-4.623-2.069-4.623-4.623s2.069-4.623 4.623-4.623a4.623 4.623 0 0 1 0 9.246zm4.807-8.339a1.077 1.077 0 0 1-1.078-1.078 1.077 1.077 0 1 1 2.155 0c0 .596-.482 1.078-1.077 1.078z">
+                    </path>
+                    <circle cx="11.994" cy="11.979" r="3.003"></circle>
+                </svg>
+            </a>
+            <a href="https://twitter.com/" target="_blank">
+                <svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="0 0 24 24"
+                    style="fill: rgba(0, 0, 0, 1);transform: ;msFilter:;">
+                    <path
+                        d="M19.633 7.997c.013.175.013.349.013.523 0 5.325-4.053 11.461-11.46 11.461-2.282 0-4.402-.661-6.186-1.809.324.037.636.05.973.05a8.07 8.07 0 0 0 5.001-1.721 4.036 4.036 0 0 1-3.767-2.793c.249.037.499.062.761.062.361 0 .724-.05 1.061-.137a4.027 4.027 0 0 1-3.23-3.953v-.05c.537.299 1.16.486 1.82.511a4.022 4.022 0 0 1-1.796-3.354c0-.748.199-1.434.548-2.032a11.457 11.457 0 0 0 8.306 4.215c-.062-.3-.1-.611-.1-.923a4.026 4.026 0 0 1 4.028-4.028c1.16 0 2.207.486 2.943 1.272a7.957 7.957 0 0 0 2.556-.973 4.02 4.02 0 0 1-1.771 2.22 8.073 8.073 0 0 0 2.319-.624 8.645 8.645 0 0 1-2.019 2.083z">
+                    </path>
+                </svg>
+            </a>
 
-            </div>
-            <div class="d-flex justify-content-center">
-                <p class="mt-3 regular subtitulo">© 2024 PODCASTWORLD</p>
-            </div>
-            
+        </div>
+        <div class="d-flex justify-content-center">
+            <p class="mt-3 regular subtitulo">© 2024 PODCASTWORLD</p>
+        </div>
+
     </footer>
 
 
