modal hero y css modal

--- a/html/index.html
+++ b/html/index.html
@@ -61,7 +61,7 @@
                 <div class="carousel-caption-container">
                     <h1 class="bold">THE LARGEST PODCAST NETWORK IN THE WORLD</h1>
                     <p class="thin">WORLDCA$T - ep.70 Tartaria, Abducciones, Los Purpura</p>
-                    <a class="boton-hero" href="#" role="button">START LISTENING</a>
+                    <a class="boton-hero" href="#" role="button" data-toggle="modal" data-target="#ModalTartaria">START LISTENING</a>
                 </div>
             </div>
             <div class="carousel-item">
@@ -69,7 +69,7 @@
                 <div class="carousel-caption-container">
                     <h1 class="bold">THE LARGEST PODCAST NETWORK IN THE WORLD</h1>
                     <p class="thin">Radio la Pera - Temporada 2</p>
-                    <a class="boton-hero" href="#" role="button">START LISTENING</a>
+                    <a class="boton-hero" href="#gallery" role="button" data-toggle="modal" data-target="#ModalPera">START LISTENING</a>
                 </div>
             </div>
             <div class="carousel-item">
@@ -77,7 +77,7 @@
                 <div class="carousel-caption-container">
                     <h1 class="bold">THE LARGEST PODCAST NETWORK IN THE WORLD</h1>
                     <p class="thin">Yo, Interneto - Temporada 1</p>
-                    <a class="boton-hero" href="#" role="button">START LISTENING</a>
+                    <a class="boton-hero" href="#" role="button" data-toggle="modal" data-target="#ModalInterneto">START LISTENING</a>
                 </div>
             </div>
         </div>
@@ -168,7 +168,7 @@
     <div class="modal fade" id="ModalInterneto" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
             aria-hidden="true">
             <div class="modal-dialog" role="document">
-                <div class="modal-content">
+                <div class="modal-content borde">
                     <div class="modal-header">
                         <h5 class="modal-title bold" id="exampleModalLabel">YO, INTERNETO</h5>
                         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
@@ -192,7 +192,7 @@
         <div class="modal fade" id="ModalTartaria" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
             aria-hidden="true">
             <div class="modal-dialog" role="document">
-                <div class="modal-content">
+                <div class="modal-content borde">
                     <div class="modal-header">
                         <h5 class="modal-title bold" id="exampleModalLabel">WORLDCA$T</h5>
                         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
@@ -215,7 +215,7 @@
         <div class="modal fade" id="ModalWild" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
             aria-hidden="true">
             <div class="modal-dialog" role="document">
-                <div class="modal-content">
+                <div class="modal-content borde">
                     <div class="modal-header">
                         <h5 class="modal-title bold" id="exampleModalLabel">THE WILD PROJECT</h5>
                         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
@@ -226,13 +226,39 @@
                         <iframe width="490" height="245" src="https://www.youtube.com/embed/FuFcFm4btwk?si=mgJquPuAldjgTiuW" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                         <div>
                             <h1 class="regular">The Wild Project</h1>
-                            <p class="thin">- Participan:
+                            <p class="thin">Participan:
                                 <br>
                                 El del rap del goku:   
                                 / @ucancmsbvzlmv4b6xn73bteq    
                                 <br>
                                 Iker Casillas con alergia:   
                                 / @ucbincozgxwjtmye-qe6kavw   </p>
+                        </div>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="boton-card" data-dismiss="modal">CLOSE</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="modal fade" id="ModalPera" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+            aria-hidden="true">
+            <div class="modal-dialog" role="document">
+                <div class="modal-content borde">
+                    <div class="modal-header">
+                        <h5 class="modal-title bold" id="exampleModalLabel">RADIO LA PERA</h5>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                    <div class="modal-body contenedormodal">
+                        <iframe width="490" height="245" src="https://www.youtube.com/embed/rPOSqetdlO0?si=fQHHQ_ftwviRq2n0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                        <div>
+                            <h1 class="regular">Radio la Pera</h1>
+                            <p class="thin">Esto es Radio La Pera, un programa de Chim, Goldem y Celia Castle.   
+                                <br>
+                                ¿No te interesa nuestra vida? Hoy hablamos de los unfollows. Tenemos un programa lleno de mucho #OT2023 
+                            </p>
                         </div>
                     </div>
                     <div class="modal-footer">
