estilo barra de paginacion

--- a/html/podcastgrid2.html
+++ b/html/podcastgrid2.html
@@ -183,18 +183,18 @@
         </div>
     </div>
     <nav aria-label="Page navigation example" class="d-flex justify-content-center">
-        <ul class="pagination">
-            <li class="page-item">
-                <a class="page-link" href="podcastgrid.html" aria-label="Previous">
+        <ul class="pagination borde">
+            <li class="page-item borde regular">
+                <a class="page-link sinborde dark" href="podcastgrid.html" aria-label="Previous">
                     <span aria-hidden="true">&laquo;</span>
                     <span class="sr-only">Previous</span>
                 </a>
             </li>
-            <li class="page-item"><a class="page-link" href="podcastgrid.html">1</a></li>
-            <li class="page-item"><a class="page-link" href="podcastgrid2.html">2</a></li>
-            <li class="page-item"><a class="page-link" href="podcastgrid3.html">3</a></li>
-            <li class="page-item">
-                <a class="page-link" href="podcastgrid3.html" aria-label="Next">
+            <li class="page-item borde regular"><a class="page-link sinborde dark" href="podcastgrid.html">1</a></li>
+            <li class="page-item borde regular"><a class="page-link sinborde dark" href="podcastgrid2.html">2</a></li>
+            <li class="page-item borde regular"><a class="page-link sinborde dark" href="podcastgrid3.html">3</a></li>
+            <li class="page-item borde regular">
+                <a class="page-link sinborde dark" href="podcastgrid3.html" aria-label="Next">
                     <span aria-hidden="true">&raquo;</span>
                     <span class="sr-only">Next</span>
                 </a>
