tabla hecha y web finalizada

--- a/html/services.html
+++ b/html/services.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    
+
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
@@ -139,7 +139,7 @@
         </div>
     </div>
 
-    <div class="container mt-5 welcome-h1">
+    <div class="container mt-5 welcome-h1 regular">
         <h1 class="regular subtitulo welcome-h1">USER OPINION</h1>
         <div class="row">
             <div class="col-md-6">
@@ -188,7 +188,45 @@
             </div>
         </div>
     </div>
-
+    <div class="container mt-3 tabla">
+        <h1 class="regular welcome-h1">OUR PLANS</h1>
+        <table class="table borde tabla">
+            <thead>
+                <tr>
+                    <th scope="col" class="borde bold">BASIC</th>
+                    <th scope="col" class="borde bold">STANDARD</th>
+                    <th scope="col" class="bold">PREMIUM</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td class="borde thin">UP TO <br>100 COURSES</td>
+                    <td class="borde thin">UP TO <br>250 COURSES</td>
+                    <td class="thin">ULIMITED <br>COURSES</td>
+                </tr>
+                <tr>
+                    <td class="borde thin">NO ADS</td>
+                    <td class="borde thin">NO ADS</td>
+                    <td class="thin">NO ADS</td>
+                </tr>
+                <tr>
+                    <td class="borde thin">LIMITED <br>PODCASTING TOOLS</td>
+                    <td class="borde thin">LIMITED <br>PODCASTING TOOLS</td>
+                    <td class="thin">UNLIMITED <br>PODCASTING TOOLS</td>
+                </tr>
+                <tr>
+                    <td class="borde regular">6.99$</td>
+                    <td class="borde regular">14.99$</td>
+                    <td class="regular">24.99$</td>
+                </tr>
+                <tr>
+                    <td class="borde"><br><a class="boton-card">CONTINUE</a><br></td>
+                    <td class="borde"><br><a class="boton-card">CONTINUE</a><br></td>
+                    <td class=""><br><a class="boton-card">CONTINUE</a></td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
     <footer class="container">
         <div class="d-flex justify-content-center">
             <a href="https://www.facebook.com/" target="_blank">
